fix item is too long problem.

--- a/todos/client/todos.css
+++ b/todos/client/todos.css
@@ -186,7 +186,7 @@ h3 {
     display: block;
     height: 50px;
     position: relative;
-    overflow: hidden;
+    overflow: auto;
     border-top: 1px solid #ccc;
 }
 
@@ -201,7 +201,7 @@ h3 {
 
 #item-list .todo .display, #item-list .todo .edit {
     margin-left: 30px;
-    height: 100%;
+    height: 32px;
     width: auto;
     float: left;
     padding-top: 18px;
